plugins/kotlin/idea/tests/testData/checker/diagnosticsMessage/fullPackageFQNameOnVisiblityError.fir.kt
// WITH_STDLIB

package a.b

@kotlin.internal.<error descr="[INVISIBLE_REFERENCE]">InlineOnly</error>
inline fun foo() {}
